# perc

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  lib.rs  main.rs  output.rs
src/commands/: config.rs  deploy.rs  dev.rs  env.rs  mod.rs  new.rs  status.rs
tests/: cli_basics.rs  cli_config.rs  cli_deploy.rs  cli_dev.rs  cli_env.rs  cli_flags.rs  cli_json_output.rs  cli_new.rs  cli_status.rs
