[package]
name = "perc"
version = "0.1.1"
edition = "2024"
description = "Scaffold, run, and deploy Rust web apps to your own VPS"
license = "MIT"
repository = "https://github.com/crabby-utils/perc"
homepage = "https://perc.daz.is"
readme = "README.md"
keywords = ["deploy", "vps", "rust", "axum", "scaffold"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["tests/"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml_edit = { version = "0.25", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.16"
dirs = "6"
indicatif = "0.18"
openssh = { version = "0.11", features = ["process-mux"] }
sha2 = "0.11.0"
tar = "0.4.45"
notify = "8"
percent-encoding = "2"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3"
